deployment/k8s/cicd/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm-ingress
  namespace: default
  annotations:
    haproxy.org/ssl-passthrough: "true"
    haproxy.org/forwarded-for: "true"
spec:
  ingressClassName: haproxy
  rules:
  - host: ma.lxd-cm.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: management-api-svc
            port:
              name: management-api
  - host: cc.lxd-cm.local
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: cluster-connector-svc
            port:
              name: cluster-conn
